--- a/login.html
+++ b/login.html
@@ -371,11 +371,11 @@
         <div class="logo">Game On</div>
         <nav>
             <ul>
-                <li><a href="C:\Users\Sony\OneDrive\Documents\gameon\login.html">Home</a></li>
-                <li><a href="C:\Users\Sony\OneDrive\Documents\gameon\about.html">About</a></li>
-                <li><a href="C:\Users\Sony\OneDrive\Documents\gameon\service.html">Service</a></li>
+                <li><a href="https://rohitdhananai7860.github.io/Game-on/login">Home</a></li>
+                <li><a href="https://rohitdhananai7860.github.io/Game-on/about">About</a></li>
+                <li><a href="https://rohitdhananai7860.github.io/Game-on/service">Service</a></li>
                 <li><a href="#" class="require-login">Design</a></li>
-                <li><a href="C:\Users\Sony\OneDrive\Documents\gameon\contact.html">Contact</a></li>
+                <li><a href="https://rohitdhananai7860.github.io/Game-on/contact">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -392,8 +392,8 @@
                     (as to go back at home page use ctrl+R or just reload it works on evry page )
                 </p>
                 <div class="cta-buttons">
-                    <a href="C:\Users\Sony\OneDrive\Documents\gameon\joinus.html"><button class="btn join">JOIN US</button></a>
-                    <a href="C:\Users\Sony\OneDrive\Documents\gameon\larnmore.html"><button class="btn secondary">Learn More</button></a>
+                    <a href="https://rohitdhananai7860.github.io/Game-on/joinus"><button class="btn join">JOIN US</button></a>
+                    <a href="https://rohitdhananai7860.github.io/Game-on/larnmore"><button class="btn secondary">Learn More</button></a>
                 </div>
             </div>
             <!-- Right side: Login & Signup Forms -->
