--- a/service.html
+++ b/service.html
@@ -208,11 +208,11 @@
         <div class="logo">Game On</div>
         <nav>
             <ul>
-                <li><a href="C:\Users\Sony\OneDrive\Documents\gameon\login.html">Home</a></li>
-                <li><a href="C:\Users\Sony\OneDrive\Documents\gameon\about.html">About</a></li>
-                <li><a href="C:\Users\Sony\OneDrive\Documents\gameon\service.html">Service</a></li>
+                <li><a href="https://rohitdhananai7860.github.io/Game-on/login">Home</a></li>
+                <li><a href="https://rohitdhananai7860.github.io/Game-on/about">About</a></li>
+                <li><a href="https://rohitdhananai7860.github.io/Game-on/service">Service</a></li>
                 <li><a href="#" class="require-login">Design</a></li>
-                <li><a href="C:\Users\Sony\OneDrive\Documents\gameon\contact.html">Contact</a></li>
+                <li><a href="https://rohitdhananai7860.github.io/Game-on/contact">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -278,7 +278,7 @@
         }
         window.addEventListener('pageshow', function(event) {
       if (event.persisted || (window.performance && performance.navigation.type === 1)) {
-        window.location.href = "file:///C:/Users/Sony/OneDrive/Documents/gameon/login.html";
+        window.location.href = "https://rohitdhananai7860.github.io/Game-on/login";
       }
     });
     </script>
