--- a/login.html
+++ b/login.html
@@ -496,7 +496,7 @@
                     showNotification("Login successful ,thanks for visting game on!");
                     // Redirect after a short delay (e.g., 3 seconds)
                     setTimeout(() => {
-                        window.location.href = "C:\\Users\\Sony\\OneDrive\\Documents\\gameon\\maincontaint.html";
+                        window.location.href = "https://rohitdhananai7860.github.io/Game-on/maincontaint";
                     }, 3000);
                 } else {
                     showNotification("Invalid username or passwords!");
