--- a/maincontaint.html
+++ b/maincontaint.html
@@ -351,7 +351,7 @@
   <div class="container section" id="community">
     <h2>Community & Events</h2>
     <p>Join a vibrant network of gamers from around the world. Share strategies, participate in community events, and make lasting connections.</p>
-    <a href="https://rohitdhananai7860.github.io/Game-on/joinuss" class="btn">Join Our Community</a>
+    <a href="https://rohitdhananai7860.github.io/Game-on/joinus" class="btn">Join Our Community</a>
   </div>
 
   <!-- Footer -->
